<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CountPrimeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_number_n" />

    <EditText
        android:id="@+id/edit_text_number_n"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <Button
        android:id="@+id/button_calculate_primes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />

    <Button
        android:id="@+id/button_calculate_primes_UI_thread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_ui" />

    <TextView
        android:id="@+id/text_view_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="40dp"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/button_test_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_test_ui_response" />

</androidx.appcompat.widget.LinearLayoutCompat>