<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_background_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/background_task_example" />

    <Button
        android:id="@+id/button_countdown_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/countdown_service_example" />

    <Button
        android:id="@+id/button_fast_click_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fast_click_game" />



</androidx.appcompat.widget.LinearLayoutCompat>